@startuml
skinparam classAttributeIconSize 0

PictureAdCar o-- Car
TextAdCar o-- Car
PictureAdFurniture o-- Furniture
TextAdFurniture o-- Furniture

class DisplayBehaviour{
    -display()
}

class PictureAdCar{
    - Car car
    - DisplayBehavior display behaviour
    + display(): String
}

class TextAdCar{
    - Car car
    + display(): String
}

class PictureAdFurniture{
    - Furniture furniture
    + display(): String
}

class TextAdFurniture{
    - Furniture furniture
    + display(): String
}

class Car{
    - String picUrl
    - String make
    - String model
    - String[] features
    - int price
}

class Furniture{
    - String picUrl
    - String description
    - float price
}





@enduml